Příprava na dokončení CAMv2 - migrace části rozhraní do TypeSpec
