# elza/elza-core/src/main/java/cz/tacr/elza/controller/vo/SyncStateVO.java
@@ -1,11 +1,0 @@
-package cz.tacr.elza.controller.vo;
-
-public enum SyncStateVO {
-
-    SYNC_OK,
-
-    NOT_SYNCED,
-
-    LOCAL_CHANGE
-
-}
